# xTests

./: .gitignore  AUTHORS.md  AUTHORS.txt  CHANGES.md  CHANGES.txt  CMakeLists.txt  Doxyfile  FAQ.md  FAQ.txt  HISTORY.md  HISTORY.txt  INSTALL.md  INSTALL.txt  KNOWN_ISSUES.md  KNOWN_ISSUES.txt  LICENSE  LICENSE.txt  NEWS.md  NEWS.txt  README.md  README.txt  TODO.md  TODO.txt  build_cmake.sh  clean_cmake.sh  prepare_cmake.sh  remove_cmake_artefacts.sh  run_all_examples.sh  run_all_scratch_tests.sh  run_all_unit_tests.sh  xtests.vc10.sln  xtests.vc6.dsw
cmake/: BuildType.cmake  TargetMacros.cmake
examples/: CMakeLists.txt  descriptors.cpp
examples/c/: CMakeLists.txt
examples/c/example.c.factorial/: CMakeLists.txt  example.c.factorial.c  main.c
examples/c/example.c.runner/: CMakeLists.txt  example.c.runner.c  main.c
examples/c/example.c.tests/: CMakeLists.txt  example.c.tests.c  main.c
examples/cpp/: CMakeLists.txt
examples/cpp/example.cpp.temp_directory/: CMakeLists.txt  example.cpp.temp_directory.cpp  main.cpp
examples/cpp/example.cpp.temp_file/: CMakeLists.txt  example.cpp.temp_file.cpp  main.cpp
examples/cpp/example.cpp.udt/: CMakeLists.txt  main.cpp
include/xtests/: implicit_link.h  terse-api.h  xtests.h
include/xtests/internal/: checked_main.h  checked_main.hpp  safestr.h
include/xtests/test/util/: compiler_warnings_suppression.first_include.h  compiler_warnings_suppression.last_include.h
include/xtests/util/: filesystem_exception.hpp  temp_directory.hpp  temp_file.hpp
projects/core/: CMakeLists.txt
projects/core/vc10/: xtests.core.vcxproj  xtests.core.vcxproj.filters
projects/core/vc6/: xtests.core.dsp
src/: CMakeLists.txt  xtests.core.cpp  xtests.internal.exception_macros.hpp  xtests.internal.string.c  xtests.internal.string.h
test/: CMakeLists.txt
test/component/: CMakeLists.txt
test/component/test.component.temp_directory/: CMakeLists.txt  entry.cpp
test/component/test.component.temp_file/: CMakeLists.txt  entry.cpp  test.component.temp_file.cpp
test/scratch/: CMakeLists.txt  test.scratch.vc6.dsw
test/scratch/libver/: main.cpp
test/scratch/test.scratch.all_failure_messages/: CMakeLists.txt  entry.cpp
test/scratch/test.scratch.basics1/: CMakeLists.txt  entry.c  test.scratch.basics1.c
test/scratch/test.scratch.basics1/vc10/: test.scratch.basics1.vcxproj  test.scratch.basics1.vcxproj.filters
test/scratch/test.scratch.basics1/vc6/: test.scratch.basics1.dsp
test/scratch/test.scratch.basics2/: CMakeLists.txt  entry.cpp  test.scratch.basics2.cpp
test/scratch/test.scratch.basics2.terse/: CMakeLists.txt  entry.cpp
test/scratch/test.scratch.basics2/vc10/: test.scratch.basics2.vcxproj  test.scratch.basics2.vcxproj.filters
test/scratch/test.scratch.basics2/vc6/: test.scratch.basics2.dsp
test/scratch/test.scratch.custom_integral_types/: CMakeLists.txt  entry.cpp
test/scratch/test.scratch.fail_all.1/: CMakeLists.txt  entry.cpp  test.scratch.fail_all.1.cpp
test/scratch/test.scratch.fail_all.1/vc10/: test.scratch.fail_all.1.vcxproj  test.scratch.fail_all.1.vcxproj.filters
test/scratch/test.scratch.fail_all.1/vc6/: test.scratch.fail_all.1.dsp
test/scratch/test.scratch.integer_comparisons.c/: CMakeLists.txt  entry.c  test.scratch.integer_comparisons.c.c
test/scratch/test.scratch.setup.fail/: CMakeLists.txt  entry.c  test.scratch.setup.fail.c
test/scratch/test.scratch.setup.fail/vc10/: test.scratch.setup.fail.vcxproj  test.scratch.setup.fail.vcxproj.filters
test/scratch/test.scratch.setup.fail/vc6/: test.scratch.setup.fail.dsp
test/scratch/test.scratch.string_slices.c/: CMakeLists.txt  test.scratch.string_slices.c.c
test/scratch/test.scratch.string_slices.c/vc10/: test.scratch.string_slices.c.vcxproj  test.scratch.string_slices.c.vcxproj.filters
test/scratch/test.scratch.string_slices.c/vc6/: test.scratch.string_slices.c.dsp
test/scratch/test.scratch.temp_directory/: CMakeLists.txt  entry.cpp  implicit_link.cpp  test.scratch.temp_directory.cpp
test/scratch/test.scratch.temp_directory/vc10/: test.scratch.temp_directory.vcxproj  test.scratch.temp_directory.vcxproj.filters
test/scratch/test.scratch.temp_directory/vc6/: test.scratch.temp_directory.dsp
test/scratch/test.scratch.temp_file/: CMakeLists.txt  entry.cpp  implicit_link.cpp  test.scratch.temp_file.cpp
test/scratch/test.scratch.temp_file/vc10/: test.scratch.temp_file.vcxproj  test.scratch.temp_file.vcxproj.filters
test/scratch/test.scratch.temp_file/vc6/: test.scratch.temp_file.dsp
test/scratch/test.scratch.verbosity_levels/: CMakeLists.txt  entry.cpp  test.scratch.verbosity_levels.cpp
test/scratch/test.scratch.verbosity_levels/vc10/: test.scratch.verbosity_levels.vcxproj  test.scratch.verbosity_levels.vcxproj.filters
test/scratch/test.scratch.verbosity_levels/vc6/: test.scratch.verbosity_levels.dsp
test/unit/: CMakeLists.txt
test/unit/test.component.shwild_patterns/: CMakeLists.txt  test.component.shwild_patterns.cpp
test/unit/test.unit.shwild_patterns/: CMakeLists.txt  entry.cpp  test.unit.shwild_patterns.cpp
test/unit/test.unit.string_comparisons/: CMakeLists.txt  entry.cpp  test.unit.string_comparisons.cpp
test/unit/test.unit.string_slices.c/: CMakeLists.txt  entry.c  test.unit.string_slices.c.c
test/unit/test.unit.string_slices.c/vc10/: test.unit.string_slices.c.vcxproj  test.unit.string_slices.c.vcxproj.filters
test/unit/test.unit.string_slices.c/vc6/: test.unit.string_slices.c.dsp
test/unit/test.unit.utility.cmdline/: CMakeLists.txt  entry.cpp
