# SIS:AUTO_GENERATED: Remove this line if you edit the file, otherwise it will be overwritten
add_subdirectory(test.scratch.basics1)
add_subdirectory(test.scratch.basics2)
add_subdirectory(test.scratch.custom_integral_types)
add_subdirectory(test.scratch.fail_all.1)
add_subdirectory(test.scratch.integer_comparisons.c)
add_subdirectory(test.scratch.setup.fail)
add_subdirectory(test.scratch.temp_directory)
add_subdirectory(test.scratch.temp_file)
add_subdirectory(test.scratch.verbosity_levels)
